// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`<Controls />\` renders correctly when there are multiple existing similarities. 1`] = `
.c0 {
  padding: 1rem;
  background-color: rgba(255,255,255,0.7);
  border-radius: 0.5rem;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
  height: 30%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  overflow-y: auto;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: grid;
  grid-template-columns: repeat(1,minmax(0,1fr));
}

.c3 {
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
  margin-left: 1em;
  margin-right: auto;
}

.c4 {
  background-image: url(-- MOCK FILE EXPORT VALUE --);
  background-size: 1.6rem 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  opacity: 0.6;
  margin-right: 0.5rem;
}

.c4:hover {
  opacity: 0.8;
}

.c2 {
  border-radius: 0.5rem;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
  padding: 6px 16px;
  background-color: lightgray;
  color: white;
  -webkit-letter-spacing: 0.03em;
  -moz-letter-spacing: 0.03em;
  -ms-letter-spacing: 0.03em;
  letter-spacing: 0.03em;
  line-height: 1.75;
  text-transform: uppercase;
  background-color: cornflowerblue;
}

.c2:hover {
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
  -webkit-filter: brightness(95%);
  filter: brightness(95%);
}

.c2:active {
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
  -webkit-filter: brightness(100%);
  filter: brightness(100%);
}

.c7 {
  border-radius: 0.5rem;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
  padding: 6px 16px;
  background-color: lightgray;
  color: white;
  -webkit-letter-spacing: 0.03em;
  -moz-letter-spacing: 0.03em;
  -ms-letter-spacing: 0.03em;
  letter-spacing: 0.03em;
  line-height: 1.75;
  text-transform: uppercase;
  background-color: lightsalmon;
}

.c7:hover {
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
  -webkit-filter: brightness(95%);
  filter: brightness(95%);
}

.c7:active {
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
  -webkit-filter: brightness(100%);
  filter: brightness(100%);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 1rem;
}

.c8 {
  padding: 0.5rem 0;
}

.c8 + div {
  border-top: 1px solid lightgray;
}

.c9 {
  display: grid;
  grid-template-columns: repeat(3,minmax(0,1fr));
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c10 {
  grid-column: span 3 / span 3;
  font-size: 0.75em;
  text-transform: uppercase;
}

.c11 {
  grid-column: span 2 / span 2;
}

.c12 {
  margin-left: 0.25rem;
  font-size: 0.9em;
  justify-self: flex-end;
  white-space: nowrap;
}

.c14 {
  justify-self: flex-start;
  font-size: 0.7em;
  color: gray;
  white-space: nowrap;
}

.c15 {
  justify-self: flex-end;
  font-size: 0.7em;
  color: gray;
  white-space: nowrap;
}

.c13 {
  font-size: 0.8em;
  font-style: italic;
  color: gray;
}

@media (min-width:640px) {
  .c5 {
    grid-template-columns: repeat(2,minmax(0,1fr));
  }
}

@media (min-width:768px) {
  .c5 {
    grid-template-columns: repeat(3,minmax(0,1fr));
  }
}

@media (min-width:1024px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:1024px) {
  .c6 {
    padding: 0.5rem 0;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:1024px) {
  .c8 {
    padding: 0 1rem;
  }

  .c8 + div {
    border-top: unset;
    border-left: 1px solid lightgray;
  }
}

<div>
  <div
    class="sc-AxjAm c0"
  >
    <div
      class="c1"
    >
      <button
        class="sc-AxheI c2"
      >
        Add
      </button>
      <span
        class="c3"
      >
        &lt; Add up to 3 similarities
      </span>
      <a
        href="https://github.com/mockiemcgee/test"
        target="blank"
      >
        <div
          class="c4"
        />
      </a>
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <div>
          <button
            class="sc-AxheI c7"
          >
            Remove
          </button>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <label
              class="c10"
              for="test/a-angle"
            >
              Angle
            </label>
            <input
              class="c11"
              id="test/a-angle"
              max="360"
              min="-360"
              step="5"
              type="range"
              value="180"
            />
            <span
              class="c12"
            >
              <output
                for="test/a-angle"
              >
                180
              </output>
              <span
                class="c13"
              >
                 
                °
              </span>
            </span>
            <span
              class="c14"
            >
              -360
            </span>
            <span
              class="c15"
            >
              360
            </span>
          </div>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <label
              class="c10"
              for="test/a-scale"
            >
              Scale
            </label>
            <input
              class="c11"
              id="test/a-scale"
              max="1.5"
              min="0"
              step="0.05"
              type="range"
              value="0.7791"
            />
            <span
              class="c12"
            >
              <output
                for="test/a-scale"
              >
                0.78
              </output>
              <span
                class="c13"
              >
                 
                x
              </span>
            </span>
            <span
              class="c14"
            >
              0.00
            </span>
            <span
              class="c15"
            >
              1.50
            </span>
          </div>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <label
              class="c10"
              for="test/a-translation"
            >
              Translation
            </label>
            <input
              class="c11"
              id="test/a-translation"
              max="2"
              min="0"
              step="0.05"
              type="range"
              value="0.4663"
            />
            <span
              class="c12"
            >
              <output
                for="test/a-translation"
              >
                0.47
              </output>
              <span
                class="c13"
              >
                 
                x
              </span>
            </span>
            <span
              class="c14"
            >
              0.00
            </span>
            <span
              class="c15"
            >
              2.00
            </span>
          </div>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <label
              class="c10"
              for="test/a-depth"
            >
              Depth
            </label>
            <input
              class="c11"
              id="test/a-depth"
              max="8"
              min="0"
              step="1"
              type="range"
              value="3"
            />
            <span
              class="c12"
            >
              <output
                for="test/a-depth"
              >
                3
              </output>
              <span
                class="c13"
              >
                 
                x
              </span>
            </span>
            <span
              class="c14"
            >
              0
            </span>
            <span
              class="c15"
            >
              8
            </span>
          </div>
        </div>
      </div>
      <div
        class="c6"
      >
        <div>
          <button
            class="sc-AxheI c7"
          >
            Remove
          </button>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <label
              class="c10"
              for="test/b-angle"
            >
              Angle
            </label>
            <input
              class="c11"
              id="test/b-angle"
              max="360"
              min="-360"
              step="5"
              type="range"
              value="-180"
            />
            <span
              class="c12"
            >
              <output
                for="test/b-angle"
              >
                -180
              </output>
              <span
                class="c13"
              >
                 
                °
              </span>
            </span>
            <span
              class="c14"
            >
              -360
            </span>
            <span
              class="c15"
            >
              360
            </span>
          </div>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <label
              class="c10"
              for="test/b-scale"
            >
              Scale
            </label>
            <input
              class="c11"
              id="test/b-scale"
              max="1.5"
              min="0"
              step="0.05"
              type="range"
              value="0.7202"
            />
            <span
              class="c12"
            >
              <output
                for="test/b-scale"
              >
                0.72
              </output>
              <span
                class="c13"
              >
                 
                x
              </span>
            </span>
            <span
              class="c14"
            >
              0.00
            </span>
            <span
              class="c15"
            >
              1.50
            </span>
          </div>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <label
              class="c10"
              for="test/b-translation"
            >
              Translation
            </label>
            <input
              class="c11"
              id="test/b-translation"
              max="2"
              min="0"
              step="0.05"
              type="range"
              value="0.7432"
            />
            <span
              class="c12"
            >
              <output
                for="test/b-translation"
              >
                0.74
              </output>
              <span
                class="c13"
              >
                 
                x
              </span>
            </span>
            <span
              class="c14"
            >
              0.00
            </span>
            <span
              class="c15"
            >
              2.00
            </span>
          </div>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <label
              class="c10"
              for="test/b-depth"
            >
              Depth
            </label>
            <input
              class="c11"
              id="test/b-depth"
              max="8"
              min="0"
              step="1"
              type="range"
              value="7"
            />
            <span
              class="c12"
            >
              <output
                for="test/b-depth"
              >
                7
              </output>
              <span
                class="c13"
              >
                 
                x
              </span>
            </span>
            <span
              class="c14"
            >
              0
            </span>
            <span
              class="c15"
            >
              8
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`\`<Controls />\` renders correctly when there are no existing similarities 1`] = `
.c0 {
  padding: 1rem;
  background-color: rgba(255,255,255,0.7);
  border-radius: 0.5rem;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
  height: 30%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  overflow-y: auto;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: grid;
  grid-template-columns: repeat(1,minmax(0,1fr));
}

.c3 {
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
  margin-left: 1em;
  margin-right: auto;
}

.c4 {
  background-image: url(-- MOCK FILE EXPORT VALUE --);
  background-size: 1.6rem 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  opacity: 0.6;
  margin-right: 0.5rem;
}

.c4:hover {
  opacity: 0.8;
}

.c2 {
  border-radius: 0.5rem;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
  padding: 6px 16px;
  background-color: lightgray;
  color: white;
  -webkit-letter-spacing: 0.03em;
  -moz-letter-spacing: 0.03em;
  -ms-letter-spacing: 0.03em;
  letter-spacing: 0.03em;
  line-height: 1.75;
  text-transform: uppercase;
  background-color: cornflowerblue;
}

.c2:hover {
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
  -webkit-filter: brightness(95%);
  filter: brightness(95%);
}

.c2:active {
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
  -webkit-filter: brightness(100%);
  filter: brightness(100%);
}

@media (min-width:640px) {
  .c5 {
    grid-template-columns: repeat(2,minmax(0,1fr));
  }
}

@media (min-width:768px) {
  .c5 {
    grid-template-columns: repeat(3,minmax(0,1fr));
  }
}

@media (min-width:1024px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <div
    class="sc-AxjAm c0"
  >
    <div
      class="c1"
    >
      <button
        class="sc-AxheI c2"
      >
        Add
      </button>
      <span
        class="c3"
      >
        &lt; Add up to 3 similarities
      </span>
      <a
        href="https://github.com/mockiemcgee/test"
        target="blank"
      >
        <div
          class="c4"
        />
      </a>
    </div>
    <div
      class="c5"
    />
  </div>
</div>
`;

exports[`\`<Controls />\` renders correctly when there is one existing similarity 1`] = `
.c0 {
  padding: 1rem;
  background-color: rgba(255,255,255,0.7);
  border-radius: 0.5rem;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
  height: 30%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  overflow-y: auto;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: grid;
  grid-template-columns: repeat(1,minmax(0,1fr));
}

.c3 {
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
  margin-left: 1em;
  margin-right: auto;
}

.c4 {
  background-image: url(-- MOCK FILE EXPORT VALUE --);
  background-size: 1.6rem 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  opacity: 0.6;
  margin-right: 0.5rem;
}

.c4:hover {
  opacity: 0.8;
}

.c2 {
  border-radius: 0.5rem;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
  padding: 6px 16px;
  background-color: lightgray;
  color: white;
  -webkit-letter-spacing: 0.03em;
  -moz-letter-spacing: 0.03em;
  -ms-letter-spacing: 0.03em;
  letter-spacing: 0.03em;
  line-height: 1.75;
  text-transform: uppercase;
  background-color: cornflowerblue;
}

.c2:hover {
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
  -webkit-filter: brightness(95%);
  filter: brightness(95%);
}

.c2:active {
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
  -webkit-filter: brightness(100%);
  filter: brightness(100%);
}

.c7 {
  border-radius: 0.5rem;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
  padding: 6px 16px;
  background-color: lightgray;
  color: white;
  -webkit-letter-spacing: 0.03em;
  -moz-letter-spacing: 0.03em;
  -ms-letter-spacing: 0.03em;
  letter-spacing: 0.03em;
  line-height: 1.75;
  text-transform: uppercase;
  background-color: lightsalmon;
}

.c7:hover {
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
  -webkit-filter: brightness(95%);
  filter: brightness(95%);
}

.c7:active {
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
  -webkit-filter: brightness(100%);
  filter: brightness(100%);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 1rem;
}

.c8 {
  padding: 0.5rem 0;
}

.c8 + div {
  border-top: 1px solid lightgray;
}

.c9 {
  display: grid;
  grid-template-columns: repeat(3,minmax(0,1fr));
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c10 {
  grid-column: span 3 / span 3;
  font-size: 0.75em;
  text-transform: uppercase;
}

.c11 {
  grid-column: span 2 / span 2;
}

.c12 {
  margin-left: 0.25rem;
  font-size: 0.9em;
  justify-self: flex-end;
  white-space: nowrap;
}

.c14 {
  justify-self: flex-start;
  font-size: 0.7em;
  color: gray;
  white-space: nowrap;
}

.c15 {
  justify-self: flex-end;
  font-size: 0.7em;
  color: gray;
  white-space: nowrap;
}

.c13 {
  font-size: 0.8em;
  font-style: italic;
  color: gray;
}

@media (min-width:640px) {
  .c5 {
    grid-template-columns: repeat(2,minmax(0,1fr));
  }
}

@media (min-width:768px) {
  .c5 {
    grid-template-columns: repeat(3,minmax(0,1fr));
  }
}

@media (min-width:1024px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:1024px) {
  .c6 {
    padding: 0.5rem 0;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:1024px) {
  .c8 {
    padding: 0 1rem;
  }

  .c8 + div {
    border-top: unset;
    border-left: 1px solid lightgray;
  }
}

<div>
  <div
    class="sc-AxjAm c0"
  >
    <div
      class="c1"
    >
      <button
        class="sc-AxheI c2"
      >
        Add
      </button>
      <span
        class="c3"
      >
        &lt; Add up to 3 similarities
      </span>
      <a
        href="https://github.com/mockiemcgee/test"
        target="blank"
      >
        <div
          class="c4"
        />
      </a>
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <div>
          <button
            class="sc-AxheI c7"
          >
            Remove
          </button>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <label
              class="c10"
              for="test/subject-angle"
            >
              Angle
            </label>
            <input
              class="c11"
              id="test/subject-angle"
              max="360"
              min="-360"
              step="5"
              type="range"
              value="90"
            />
            <span
              class="c12"
            >
              <output
                for="test/subject-angle"
              >
                90
              </output>
              <span
                class="c13"
              >
                 
                °
              </span>
            </span>
            <span
              class="c14"
            >
              -360
            </span>
            <span
              class="c15"
            >
              360
            </span>
          </div>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <label
              class="c10"
              for="test/subject-scale"
            >
              Scale
            </label>
            <input
              class="c11"
              id="test/subject-scale"
              max="1.5"
              min="0"
              step="0.05"
              type="range"
              value="0.7791"
            />
            <span
              class="c12"
            >
              <output
                for="test/subject-scale"
              >
                0.78
              </output>
              <span
                class="c13"
              >
                 
                x
              </span>
            </span>
            <span
              class="c14"
            >
              0.00
            </span>
            <span
              class="c15"
            >
              1.50
            </span>
          </div>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <label
              class="c10"
              for="test/subject-translation"
            >
              Translation
            </label>
            <input
              class="c11"
              id="test/subject-translation"
              max="2"
              min="0"
              step="0.05"
              type="range"
              value="0.4663"
            />
            <span
              class="c12"
            >
              <output
                for="test/subject-translation"
              >
                0.47
              </output>
              <span
                class="c13"
              >
                 
                x
              </span>
            </span>
            <span
              class="c14"
            >
              0.00
            </span>
            <span
              class="c15"
            >
              2.00
            </span>
          </div>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <label
              class="c10"
              for="test/subject-depth"
            >
              Depth
            </label>
            <input
              class="c11"
              id="test/subject-depth"
              max="8"
              min="0"
              step="1"
              type="range"
              value="3"
            />
            <span
              class="c12"
            >
              <output
                for="test/subject-depth"
              >
                3
              </output>
              <span
                class="c13"
              >
                 
                x
              </span>
            </span>
            <span
              class="c14"
            >
              0
            </span>
            <span
              class="c15"
            >
              8
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
